--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [tool.poetry]
 name = "frgeostat"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["volt-france <arno.veletanlic@volteuropa.org>"]
 readme = "README.md"
@@ -24,6 +24,7 @@ ipywidgets = "^8.0.7"
 jinja2 = "^3.1.2"
 addict = "^2.4.0"
 quickbar = "^0.1.1.post0"
+unidecode = "^1.3.6"
 
 [tool.poetry.scripts]
 fr-geo-stats = "frgeostat.cli:app"
